mythtv (2:0.25.0~master.20120316.53761e2-0ubuntu2) UNRELEASED; urgency=low

  * refresh default_directories patch for changes upstream.

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Tue, 20 Mar 2012 00:04:57 -0500

mythtv (2:0.25.0~master.20120316.53761e2-0ubuntu1) precise; urgency=low

  [ Thomas Mashos ]
  * Updated DB schema for standard plugins (LP: #944128)

  [ Mario Limonciello ]
  * Remove references to mythmessage.
  * Fix permissions on all existing log files on upgrade.
  * New upstream checkout (53761e2)
  * >>Upstream changes since last upload (6519666):
  * [53761e2] Use toLocal8Bit() for loading mysql.txt.
  * [c3b022a] Don't display frontend status box log viewer button
  * [8284bb7] Mention the detected character encoding
  * [fa639a7] Make users have to figure out if their video works
  * [5fb541e] Update Youtube player API to v3.
  * [2ce3690] Identify DVD commentary tracks in the Audio track
    selection dialog.
  * [cbd9703] Prevent showing 0x0 artwork when a recording doesn't have
    Seas/Ep.
  * [9c4e7fd] Slight mod on [be81782c0] (function names).
  * [187e37d] Close DB connections before running jobs.
  * [be81782] Make sure we cleanup DB connections before thread exit
    (non-MThread).
  * [201c153] Missed a change from 1a651934c
  * [9b6cdba] Rename 'file browse mode' to try and discourage it's use.
    Browsing the database is now 'Browse Library (recommended) and what
    was called file browse is now 'Browse Filesystem (slow)'
  * [9e80861] Rename 'Enable/Disable Flat view' in the video browser to
    'Show/Hide Directory Structure' to try and reduce the confusion this
    mode currently causes.
  * [1a65193] Only display the standby screen if the master backend is
    configured to shut down when idle. We can assume that if the user
    hasn't configured their backend to shut down then they don't care to
    know that the frontends are idle.
  * [15a85ec] Call DestoyMythMainWindow() before exit, even on error
    exits.